--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ion-phaser/react": "^1.2.0",
     "phaser": "^3.19.0",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-phaser": "^0.1.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "3.1.1"
   },
   "scripts": {
