--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-script-tag": "^1.1.2",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-window-size": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
